--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "datatables.net-dt": "^1.13.4",
     "jszip": "^3.10.1",
     "material-icons": "^1.13.7",
+    "morgan": "^1.10.0",
+    "natural": "^6.5.0",
     "pdfmake": "^0.2.7",
     "popper.js": "^1.16.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-table-next": "^4.0.3",
@@ -24,6 +28,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "string-similarity": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
