--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
     "string-similarity": "^4.0.4",
     "web-vitals": "^1.0.1"
